--- a/Porfolio.html
+++ b/Porfolio.html
@@ -51,7 +51,7 @@
             </p>
             <img src="images/1.png" alt="logo">
             <article>
-                <img src="images/Saly-15.png" alt="logo">
+                <img src="images/Baby Vigimon.png" alt="logo">
                 <p>Baby Vigimon</p>
                 <div class="btn">
                     <a href="https://naruto92osam.github.io/babyvigimon/">Visit Now</a>
@@ -61,14 +61,14 @@
         </div>
         <div class="right">
             <article>
-                <img src="images/Saly-12.png" alt="logo">
-                <p>Baby Vigimon</p>
+                <img src="images/AI Luanchpad.png" alt="logo">
+                <p>AI Luanchpad</p>
                 <div class="btn">
-                    <a href="#">Visit Now</a>
+                    <a href="https://naruto92osam.github.io/AI-luanchpad/">Visit Now</a>
                 </div>
             </article>
             <article>
-                <img src="images/Saly-19.png" alt="logo">
+                <img src="images/Land Marketing.png" alt="logo">
                 <p>Land Marketing</p>
                 <div class="btn">
                     <a href="https://naruto92osam.github.io/Land-Marketing/">Visit Now</a>
